--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -6,7 +6,7 @@ base = "light"
 backgroundColor = '#FFFFFF'
 
 # Background color for sidebar and most interactive widgets
-secondaryBackgroundColor = '#a8c5ff'
+#secondaryBackgroundColor = '#a8c5ff'
 
 # Color used for almost all text
 textColor = '#31333F'
