--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -3,18 +3,18 @@
 base = "light"
 
 # Background color for the main content area
-backgroundColor = '#FFFFFF'
+#backgroundColor = '#FFFFFF'
 
 # Background color for sidebar and most interactive widgets
 #secondaryBackgroundColor = '#a8c5ff'
 
 # Color used for almost all text
-textColor = '#31333F'
+#textColor = '#31333F'
 
 # Font family for all text in the app, except code blocks
 # Accepted values (serif | sans serif | monospace) 
 # Default: "sans serif"
-font = "sans serif"
+font = "Pretendard"
 
 [client]
 showSidebarNavigation = false
